<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center"
    android:windowSoftInputMode="adjustResize"
    tools:ignore="MissingDefaultResource">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_dialog"
        android:minWidth="600dp"
        android:orientation="vertical">

        <TextView
            style="@style/Dialog_title"
            android:minHeight="65dp"
            android:text="@string/defalt_info" />
        <!--app:setTextFont="ODD"-->

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/c000000" />
        <include
            android:id="@+id/input_data"
            layout="@layout/defaltdata_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:minHeight="300dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/c000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_cancel"
                style="@style/Dialog_cancel_button"
                android:layout_weight="0.5"

                android:background="#FF0000"
                android:text="@string/dialog_cancel_text"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/c000000" />

            <Button
                android:id="@+id/dialog_select"
                style="@style/Dialog_select_button"
                android:layout_weight="0.5"
                android:text="@string/dialog_save_text"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>